; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_iommu2.c_omap2_cr_to_e.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_iommu2.c_omap2_cr_to_e.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cr_regs = type { i32, i32 }
%struct.iotlb_entry = type { i32, i32, i32, i32, i32, i32, i32 }

@MMU_CAM_VATAG_MASK = common dso_local global i32 0, align 4
@MMU_RAM_PADDR_MASK = common dso_local global i32 0, align 4
@MMU_CAM_V = common dso_local global i32 0, align 4
@MMU_CAM_PGSZ_MASK = common dso_local global i32 0, align 4
@MMU_RAM_ENDIAN_MASK = common dso_local global i32 0, align 4
@MMU_RAM_ELSZ_MASK = common dso_local global i32 0, align 4
@MMU_RAM_MIXED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cr_regs*, %struct.iotlb_entry*)* @omap2_cr_to_e to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap2_cr_to_e(%struct.cr_regs* %0, %struct.iotlb_entry* %1) #0 {
  %3 = alloca %struct.cr_regs*, align 8
  %4 = alloca %struct.iotlb_entry*, align 8
  store %struct.cr_regs* %0, %struct.cr_regs** %3, align 8
  store %struct.iotlb_entry* %1, %struct.iotlb_entry** %4, align 8
  %5 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %6 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @MMU_CAM_VATAG_MASK, align 4
  %9 = and i32 %7, %8
  %10 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %11 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %13 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MMU_RAM_PADDR_MASK, align 4
  %16 = and i32 %14, %15
  %17 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %18 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %20 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @MMU_CAM_V, align 4
  %23 = and i32 %21, %22
  %24 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %25 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  %26 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %27 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @MMU_CAM_PGSZ_MASK, align 4
  %30 = and i32 %28, %29
  %31 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %32 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %31, i32 0, i32 3
  store i32 %30, i32* %32, align 4
  %33 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %34 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @MMU_RAM_ENDIAN_MASK, align 4
  %37 = and i32 %35, %36
  %38 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %39 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %38, i32 0, i32 4
  store i32 %37, i32* %39, align 4
  %40 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %41 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @MMU_RAM_ELSZ_MASK, align 4
  %44 = and i32 %42, %43
  %45 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %46 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %45, i32 0, i32 5
  store i32 %44, i32* %46, align 4
  %47 = load %struct.cr_regs*, %struct.cr_regs** %3, align 8
  %48 = getelementptr inbounds %struct.cr_regs, %struct.cr_regs* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = load i32, i32* @MMU_RAM_MIXED, align 4
  %51 = and i32 %49, %50
  %52 = load %struct.iotlb_entry*, %struct.iotlb_entry** %4, align 8
  %53 = getelementptr inbounds %struct.iotlb_entry, %struct.iotlb_entry* %52, i32 0, i32 6
  store i32 %51, i32* %53, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
